# semperr

./: .gitignore  .htaccess  Clad.html  Dev.html  INSTITUTIONAL_ROADMAP.md  NEWS_FEED_README.md  Semperr.html  Trace.html  about.html  archive.html  blog.css  capabilities.html  careers.html  charter.html  chortle.html  clad-dispatches.html  company.html  contact.html  craft-dispatches.html  curated-dispatches.html  dispatches.html  events.html  index.html  market-pulse.html  news-archive.html  package.json  press.html  privacy.html  robots.txt  sitemap.xml  styles.css  terms.html  trace-dispatches.html
components/: CapabilitySection.jsx  (+11 more)
trace/: .env.example  .gitignore  Dockerfile  README.md  VERCEL_DEPLOY.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
trace/api/: index.py
trace/app/: __init__.py  config.py  database.py  deps.py  logging.py  main.py  security.py
trace/app/api/: analyze.py  auth.py  runs.py  strategies.py
trace/app/auth/: __init__.py  invite.py  neon.py
trace/app/dashboard/: routes.py
trace/app/models/: __init__.py  result.py  run.py  score_history.py  strategy.py  user.py
trace/app/schemas/: auth.py  company.py  result.py  run.py  strategy.py
trace/app/services/: aggregator.py  exa.py  extractor.py  llm.py  normalizer.py  pipeline.py  query_gen.py  recency.py  scorer.py  synthesizer.py
trace/migrations/: env.py
trace/migrations/versions/: 0001_initial.py  0002_neon_auth.py  0003_drop_auth_user_id.py
trace/tests/: conftest.py  test_auth.py  test_neon_auth.py  test_normalizer.py  test_pipeline.py  test_scorer.py
(+41 files in other folders)
