[project]
name = "trace"
version = "0.1.0"
description = "Trace — Semperr adaptive deal sourcing intelligence engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "jinja2==3.1.4",
  "python-multipart==0.0.19",
  "pydantic==2.10.3",
  "pydantic[email]==2.10.3",
  "pydantic-settings==2.7.0",
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "psycopg[binary]==3.2.3",
  "argon2-cffi==23.1.0",
  "itsdangerous==2.2.0",
  "httpx==0.28.1",
  "bleach==6.2.0",
  "google-genai==0.3.0",
  "exa-py==1.7.1",
  "structlog==24.4.0",
  "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "pytest-cov==6.0.0",
  "httpx==0.28.1",
  "ruff==0.8.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
